# CanViT-pretrain

./: .envrc.example  .envrc.nibi  .gitignore  .gitmodules  CLAUDE.md  IN21K.md  NOTES_CURRICULUM.md  README.md  SA1B_TRAINING.md  SLURM.md  bad_images.txt  conftest.py  pyproject.toml  sa1b_links.tsv
avp/: attention.py  model.py  rope.py  test.py
avp_vit/: __init__.py
avp_vit/active/: __init__.py
avp_vit/attention/: __init__.py  test.py
avp_vit/attention/convex/: __init__.py  test.py
avp_vit/backbone/dinov3/: __init__.py  test.py
avp_vit/backbone/ijepa/: __init__.py  test.py
avp_vit/backbone/protocol/: __init__.py
avp_vit/backend/: __init__.py
avp_vit/backend/dinov3/: __init__.py  test.py
avp_vit/backend/ijepa/: __init__.py  test.py
avp_vit/checkpoint/: __init__.py  test.py
avp_vit/glimpse/: __init__.py  test.py
avp_vit/model/: __init__.py  test.py
avp_vit/model/hidden/: __init__.py  test.py
avp_vit/rope/: __init__.py  test.py
avp_vit/train/: __init__.py  __main__.py  config.py  data.py  ema.py  feature_dataset.py  loop.py  loss.py  model.py  norm.py  probe.py  scheduler.py  step.py  test.py  viewpoint.py  viz.py
avp_vit/train/curriculum/: __init__.py  test.py
avp_vit/train/data/: __init__.py  shards.py  test.py
avp_vit/train/loss/: __init__.py  test.py
avp_vit/train/norm/: __init__.py  test.py
avp_vit/train/probe/: __init__.py  test.py
avp_vit/train/scheduler/: __init__.py  test.py
avp_vit/train/state/: __init__.py  test.py
avp_vit/train/viewpoint/: __init__.py  test.py
avp_vit/train/viz/: __init__.py  comet.py  image.py  metrics.py  pca.py  plot.py  policy.py  sample.py  test.py  train_viz.py  validate.py
avp_vit/train_gaussians/: __init__.py  config.py  data.py  test.py  viz.py
canvit/: __init__.py  test.py
canvit/attention/: __init__.py  test.py
canvit/backbone/: __init__.py  dinov3.py
canvit/rope/: __init__.py
canvit_eval/: policies.py  test_policies.py  utils.py
canvit_eval/ade20k/analyze/: __init__.py
canvit_eval/ade20k/dataset/: __init__.py
canvit_eval/ade20k/eval_dinov3_probe/: __init__.py
canvit_eval/ade20k/evaluate/: __init__.py
canvit_eval/dis5k/: CLAUDE.md  __init__.py
canvit_eval/reconstruction/: __init__.py
canvit_pretrain/: __init__.py
canvit_pretrain/checkpoint/: __init__.py  test.py
canvit_pretrain/datasets/: __init__.py  indexed_image_folder.py  test_indexed_image_folder.py
canvit_pretrain/train/: __init__.py  __main__.py  config.py  loop.py  loss.py  model.py  probe.py  scheduler.py  step.py  test.py  test_step.py  transforms.py  utils.py  viewpoint.py
docs/: philosophy.md  seamless-resume-plan.md
drac_imagenet/: __init__.py  test.py
inference_app/: __init__.py  __main__.py  app.py  config.py  gpu_worker.py  rendering.py  types.py
sa1b/: bench_dataloader.py  bench_dataloader.sh  bench_nfs_vs_local.py  bench_nfs_vs_local.sh  build_tar_indexes.py  build_tar_indexes.sh  download.py  export_features.py  export_features.sh  submit_export.sh  train.sh
scripts/: bench.py  bench_components.py  bench_dataloader.py  bench_ewa_variants.py  bench_interactive.py  bench_latency.py  bench_loaders.py  bench_overhead.py  bench_throughput.py  build_parquet.py  build_shuffled_index.py  check_shard_completeness.py  download_sa1b.py  eval.py  eval_all_probes.sh  exp_position_decode.py  export_features.py  export_in21k_features.py  flops.py  infer_pca.py  inference_app.py  inference_multi_grid.py  inference_streamlit.py  inspect_ckpt.py  metacognitive_analysis.py  microbench_canvas_ops.py  migrate_ablation_checkpoints.py  migrate_checkpoint.py  normalization_analysis.py  profile_canvas_attention.py  profile_forward.py  prove_cross_process_variance.py  push_ablation_checkpoints.py  push_all_probes.py  push_probes.py  test_feature_dataset.py  test_resume.sbatch  train_ade20k_probe.py  train_ade20k_probe_v2.py  train_gaussian_recon.py  (+5 more)
scripts/dtype_accuracy_eval/: __init__.py  __main__.py
scripts/ghosting/: define_phenom.py  test.py
scripts/sa1b/: download.py  export_features.sh
scripts/scan_failed/: __init__.py  __main__.py  scan.sbatch
scripts/train_scene_match/: __main__.py  config.py  data.py  model.py  scheduler.py  test.py  train.py  viz.py
scripts/validate_in1k/: __init__.py  __main__.py
slurm/: env.sh  eval_ade20k.sbatch  eval_ade20k_policy.sbatch  eval_ade20k_sweep.sbatch  eval_in1k.sbatch  eval_in1k_policy.sbatch  eval_in1k_sweep.sbatch  export_features.sh  export_sa1b_features.sh  interactive.sh  smoke_test.sh  submit_ablations.sh  test_array_resume.py  test_array_resume.sbatch  test_resume.sbatch  test_signal.py  test_signal.sbatch  test_signal_dataloader.py  test_signal_dataloader.sbatch  train.sbatch  train_ade20k_probes.sbatch
slurm/ablations/: 2riid-no-fiid.sh  baseline.sh  common.sh  dcan256.sh  dcan512.sh  no-bptt.sh  no-dense.sh  no-fiid.sh  no-reads.sh  no-vpe.sh  qkvo-dcan256.sh  qkvo-dcan384.sh  rw-stride6.sh  vit-s.sh
tests/: test_avp.py  test_dinov3.py
throwaway/: error_vs_glimpse_size.py  rope_bench.py
(+38 files in other folders)
