[project]
name = "canvit-train"
version = "0.1.0"
description = "CanViT pretraining and evaluation"
authors = [{ name = "Yohaï-Eliel BERREBY", email = "me@yberreby.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "canvit",
    "dinov3",
    "dinov3-probes",
    "ybml",
    "torch>=2.0",
    "torchvision",
    "huggingface-hub",
    "safetensors",
    "comet-ml",
    "tyro",
    "tqdm",
    "rich",
    "omegaconf",
    "dacite",
    "optuna",
    "albumentations",
    "pandas",
    "pyarrow",
    "polars",
    "torchmetrics",
    "matplotlib",
    "plotly",
    "xxhash",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["canvit_pretrain", "canvit_eval", "drac_imagenet"]

[tool.uv.sources]
dinov3 = { git = "https://github.com/yberreby/dinov3.git" }
ybml = { git = "https://github.com/yberreby/ybml.git" }
canvit = { git = "ssh://git@github.com/yberreby/CanViT.git", branch = "main" }
dinov3-probes = { git = "https://github.com/yberreby/dinov3-probes.git" }

[dependency-groups]
dev = [
    "basedpyright>=1.36.1",
    "ipython",
    "pypatree",
    "pytest>=9.0.2",
    "pytest-cov",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["canvit_eval", "canvit_pretrain"]
python_files = ["test.py", "test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["throwaway", "misc"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.basedpyright]
typeCheckingMode = "standard"
