[project]
name = "canvit-pretrain"
version = "0.1.0"
description = "CanViT pretraining (passive-to-active dense distillation)"
authors = [{ name = "Yohaï-Eliel BERREBY", email = "me@yberreby.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "canvit-pytorch",
    "dinov3",
    "dinov3-in1k-probes",
    "ybml",
    "torch>=2.10",
    "torchvision",
    "transformers>=4.50.0",
    "huggingface-hub",
    "safetensors",
    "comet-ml",
    "tyro",
    "tqdm",
    "rich",
    "omegaconf",
    "dacite",
    "optuna",
    "pyarrow",
    "polars",
    "torchmetrics",
    "matplotlib",
    "xxhash",
    "opencv-python-headless>=4.13.0.90",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["canvit_pretrain", "drac_imagenet"]

[tool.uv.sources]
canvit-pytorch = { git = "https://github.com/m2b3/CanViT-PyTorch.git" }
dinov3 = { git = "https://github.com/facebookresearch/dinov3.git", rev = "54694f7627fd815f62a5dcc82944ffa6153bbb76" }
dinov3-in1k-probes = { git = "https://github.com/m2b3/dinov3-in1k-probes.git" }
ybml = { git = "https://github.com/yberreby/ybml.git", rev = "b161368" }

[dependency-groups]
dev = [
    "basedpyright>=1.36.1",
    "ipython",
    "pypatree",
    "pytest>=9.0.2",
    "pytest-cov",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["canvit_pretrain"]
python_files = ["test.py", "test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["throwaway", "misc"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Sets torch._functorch.config before imports (required).
"canvit_pretrain/train/loop.py" = ["E402"]

[tool.basedpyright]
typeCheckingMode = "standard"
